<resources>
    <string name="app_name">Pokedex</string>
    <string name="Home">Home</string>
    <string name="Pokedex">Pokedex</string>
    <string name="Profile">Profile</string>
    <string name="Map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pokemon_list">PokemonList</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="pokemon_hp">HP</string>
    <string name="pokemon_physics">Pokemon physics</string>
    <string name="pokemon_type">Type</string>
    <string name="api_input_types">Pokemon type</string>
    <string name="pokemon_attack">Attack</string>
    <string name="api_input_attack">Attack</string>
    <string name="pokemon_defence">Defence</string>
    <string name="api_input_defence">Defence</string>
    <string name="maps_api_key">AIzaSyAHviOVrg14GhOsF-TaQ1ctLbVY_9emoao</string>
</resources>